--- a/photography page/style.css
+++ b/photography page/style.css
@@ -1,99 +1,129 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    font-family: "Poppins", sans-serif;
-
+    font-family: "popins",sans-serif;
 }
+
 .main_box{
-    background:url(" photo.jpg");
+    background-image: url("photo.jpg");
     height: 100vh;
     background-size: cover;
 }
-.btn_one{
+
+.btn_one i{
     color: white;
     font-size: 25px;
-    font-weight: 600px;
+    font-weight: 700;
     position: absolute;
     left: 16px;
-    line-height: 60px;
+    line-height: 40px;
     cursor: pointer;
-
+    transition: all 0.3s linear;
 }
+
 .sidebar_menu{
     position: fixed;
-    /* left: -300; */
+    left:-300px;
+    width: 200px;
     height: 100vh;
-    width: 300px;
-    background-color: rgba(255,255,255,0.1);
-    box-shadow:0 0 6px rgba(255,255,255,0.5) ;
+    background-color: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 6px rgba(255, 255, 255,0.5);
+    transition: all 0.3s linear;
 }
+
 .sidebar_menu .logo{
-    /* color: white; */
-    position: absolute;
+    position:absolute;
     width: 100%;
-    line-height: 50px;
-    box-shadow: 0 0 4px rgba(255,255,255,0.5);
+    line-height: 40px;
+    box-shadow: 0 2px 4px rgba(255, 255, 255,0.5);
+    height: 50px;
+   
 }
+
 .sidebar_menu .logo a{
-    position: absolute;
+    position:absolute;
     left: 50px;
     color: white;
     text-decoration: none;
-    font-size: 20px;
-    font-weight:500;
+    font-size: 15px;
+    font-weight: 500;
 }
+
 .sidebar_menu .btn_two i{
     color: grey;
-    font-size: 25px;
-    line-height: 60px;
+    font-size: 20px;
+    line-height: 40px;
     position: absolute;
-    left: 275px;
-    /* opacity: 0; */
+    left: 180px;
+    opacity: 0;
     cursor: pointer;
+    transition: all 0.3s linear;
+
 }
+
 .sidebar_menu .menu{
     position: absolute;
     width: 100%;
-    top: 80px;
-}
-.sidebar_menu .menu li{
-    margin-top: 6px;
-    padding: 8px 10px;
+    top: 60px;
 }
 
-.sidebar_menu .menu l,a{
+.sidebar_menu .menu li{
+    margin-top: 4px;
+    padding: 12px 17px;
+}
+
+.sidebar_menu .menu i,a{
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 15px;
 }
+
 .sidebar_menu .menu i{
-    padding-right: 8px;
+    padding-right: 4px;
 }
+
+.sidebar_menu .social_media{
+    position: absolute;
+    left: 15%;
+    bottom: 20px;
+}
+
 .sidebar_menu .social_media{
     color: white;
     opacity: 0.5;
-    position: absolute;
-    left: 25%;
-    bottom:10px;
+    padding: 0 5px;
 }
-.sidebar_menu .social_media i{
-    color: white;
-    opacity: 0.5;
-    padding:0 5px ;
-} 
+
 #check{
     display: none;
 }
+
 .sidebar_menu .menu li:hover{
-    box-shadow: 0 0 4px rgba(255,255,255,0.5);
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
 }
-.btn_one:hover{
+
+.btn_one i:hover{
     font-size: 40px;
 }
-.btn_two:hover{
-    font-size: 35px;
-}
-.social_media a:hover{
+
+.btn_two i:hover{
     font-size: 30px;
-    
 }
+
+.sidebar_menu .social_media i:hover{
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+#check:checked ~ .sidebar_menu{
+    left: 0;
+}
+
+#check:checked ~ .btn_one i{
+    opacity: 0;
+}
+
+#check:checked ~ .sidebar_menu .btn_two i{
+    opacity: 1;
+}
+
